--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ghost",
   "version": "5.112.0",
+  "packageManager": "yarn@1.22.19",
   "description": "The professional publishing platform",
   "author": "Ghost Foundation",
   "homepage": "https://ghost.org",
